feedback : remove useless usage of IOUtils