@@ -1,16 +1,14 @@
 package com.ducatillon.graphqlclient.util;
 
-import io.micrometer.core.instrument.util.IOUtils;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
+import java.io.IOException;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public final class GraphqlSchemaReaderUtil {
 
-  public static String getSchemaFromFile(final String schemaName) {
-    final InputStream inputStream = GraphqlSchemaReaderUtil.class.getClassLoader()
-        .getResourceAsStream("graphql/" + schemaName + ".graphql");
-    return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+  public static String getSchemaFromFileName(final String filename) throws IOException {
+    return new String(
+        GraphqlSchemaReaderUtil.class.getClassLoader().getResourceAsStream("graphql/" + filename + ".graphql").readAllBytes());
+
   }
 }
